2009-09-11  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c
	(on_connection_event): properly handle messages comming from
	conic. Now the TnyDevice properly handles
	connection events when changing between networks.

2009-09-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
	removed some unused variables.
	(do_notify_in_idle_destroy): remove the reference to the summary
	*after* freeing the TnyCamelHeader instances to prevent crashes
	when the summary was already freed

	* libtinymail-camel/camel-list/camel/providers/pop3/camel-pop3-store.c (wait_for_login_delay):
	replaced a g_static_rec_mutex_lock by a g_static_rec_mutex_trylock
	to avoid deadlocks when a POP3 account is executing a disconnect
	caused by pop3_try_authenticate and wait_for_login_delay

2009-09-07  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-list/camel/providers/pop3/camel-pop3-store.c (pop3_try_authenticate):
	do not report connection problems as authentication errors

2009-08-31  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(do_notify_in_idle_destroy): fixes a crash when the TnyFolder does
	not have a CamfelFolder loaded

2009-08-28  Jürg Billeter  <j@bitron.ch>

	* libtinymail-camel/tny-camel-msg.c: (tny_camel_msg_parse):
	* libtinymail-camel/tny-camel-msg.h: add function to parse message
	from stream

2009-08-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c
	(tny_maemo_conic_device_reset): clear the priv->iap when reseting
	the device as it will be no longer valid.

	* camel/camel-mime-part.c (camel_mime_part_set_filename): if the
	mime-type does not have mime-type then set it as
	octet-stream. Merged from Camel upstream

2009-08-20  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (do_notify_in_idle_destroy)