@@ -1,3 +1,9 @@
+2009-09-14  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-camel/tny-camel-common.c (split_recipients):
+	improved email address parsing. We were not correctly detecting
+	quotes inside email addresses
+
 2009-09-11  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-maemo/tny-maemo-conic-device.c
